--- a/conf/ghostty/config
+++ b/conf/ghostty/config
@@ -27,6 +27,9 @@ shell-integration = zsh
 shell-integration-features = sudo
 
 # macos-titlebar-style = hidden
+macos-option-as-alt = left
+
+link-url = true
 
 auto-update = download
 
