feat(shell): update oh-my-posh git segment config, set no ligatures for ghostty

--- a/conf/ghostty/config
+++ b/conf/ghostty/config
@@ -1,4 +1,4 @@
-font-family = JetBrainsMono Nerd Font Mono
+font-family = JetBrainsMonoNL Nerd Font Mono
 font-feature = -liga
 cursor-style = block
 
