--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -164,10 +164,11 @@ animations {
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
-# dwindle {
+dwindle {
 #     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-#     preserve_split = true # You probably want this
-# }
+    preserve_split = true # You probably want this
+    force_split = 2
+}
 
 # See https://wiki.hypr.land/Configuring/Master-Layout/ for more
 master {
@@ -231,7 +232,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, U, layoutmsg, togglesplit
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
