--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -163,6 +163,12 @@ animations {
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
 
+xwayland {
+    enabled = true
+    force_zero_scaling = true
+    # create_abstract_socket = true
+}
+
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
 #     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
