--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -101,7 +101,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 0.92
 
     shadow {
         enabled = true
@@ -113,10 +113,10 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 10
-        passes = 1
+        size = 8
+        passes = 2
 
-        vibrancy = 0.3696
+        vibrancy = 0.1696
     }
 }
 
@@ -333,3 +333,11 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# smart gaps
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
