feat:(sta01): update hyprland conf, add pkgs, add home files "assets"

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -36,9 +36,9 @@ $menu = dmenu-wl_run -i --monitor "$(swaymsg -t get_outputs | jq -r '.[] | selec
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
+# exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & zen-beta
+exec-once = waybar & hyprpaper
 
 
 #############################
@@ -182,10 +182,11 @@ master {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
-# misc {
-#     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-#     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-# }
+misc {
+    # force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    # disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_splash_rendering = true
+}
 
 
 #############
@@ -199,6 +200,8 @@ input {
     kb_model =
     kb_options =
     kb_rules =
+
+    numlock_by_default = true
 
     repeat_rate = 30
     repeat_delay = 230
@@ -341,3 +344,11 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
+
+
+# blacklist opacities
+windowrulev2 = opacity 1.0 override, class:^(jetbrains-toolbox)$
+windowrulev2 = opacity 1.0 override, class:^(jetbrains-webstorm)$
+windowrulev2 = opacity 1.0 override, class:^(jetbrains-idea)$
+windowrulev2 = opacity 1.0 override, class:^(jetbrains-rustrover)$
+windowrulev2 = opacity 1.0 override, class:^(jetbrains-datagrip)$
