chore: update flake

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -352,3 +352,7 @@ windowrulev2 = opacity 1.0 override, class:^(jetbrains-webstorm)$
 windowrulev2 = opacity 1.0 override, class:^(jetbrains-idea)$
 windowrulev2 = opacity 1.0 override, class:^(jetbrains-rustrover)$
 windowrulev2 = opacity 1.0 override, class:^(jetbrains-datagrip)$
+
+# float 
+windowrulev2 = float, class:^(zen-beta)$
+
