--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -16,6 +16,7 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor = HDMI-A-1, 2560x1440@144, 0x0, 1
+monitor = DP-1, 3840x2160@160, -1440x-783, 1.5, transform, 1, bitdepth, 10
 
 
 ###################
