fix(sta01): open dmenu run on currently active monitor, fix xwayland

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor = DP-1, 3840x2160@160, 0x0, 1.5, transform, 1, bitdepth, 10
 # Set programs that you use
 $terminal = ghostty
 $fileManager = nemo
-$menu = dmenu-wl_run -i --monitor "$(swaymsg -t get_outputs | jq -r '.[] | select(.focused).name')"
+$menu = dmenu-wl_run -i --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true) | .name')"
 
 #################
 ### AUTOSTART ###
