feat(hyprland): make prismlauncher windows float per default

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -356,4 +356,5 @@ windowrulev2 = opacity 1.0 override, class:^(jetbrains-datagrip)$
 
 # float 
 windowrulev2 = float, class:^(zen-beta)$
+windowrulev2 = float, class:^(org.prismlauncher.PrismLauncher)$
 
