--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -15,8 +15,14 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor = HDMI-A-1, 2560x1440@144, 1440x543, 1
-monitor = DP-1, 3840x2160@160, 0x0, 1.5, transform, 1, bitdepth, 10
+# vertical
+# monitor = HDMI-A-1, 2560x1440@144, 1440x543, 1
+# monitor = DP-1, 3840x2160@160, 0x0, 1.5, transform, 1, bitdepth, 10
+
+# horizontal
+monitor = HDMI-A-1, 2560x1440@144, 2560x0, 1
+monitor = DP-1, 3840x2160@160, 0x0, 1.5, bitdepth, 10
+
 
 
 ###################
