feat(hyprland): do not wrap movefocus

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -99,6 +99,9 @@ general {
     allow_tearing = false
 
     layout = dwindle
+
+    # do not wrap movefocus for windows
+    no_focus_fallback = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
