feat(hyprlock): add hyprlock

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -252,6 +252,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, layoutmsg, togglesplit
+bind = $mainMod, I, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
