fix: make tuigreet only use hyprland (uwsm), other fixes
- hyprland uwsm is now managed by the hyprland nixos module
- missing '--' have been added to the nix gc configuration
- custom tuigreet module has been renamed to greetd
- custom hyprland module has been moved to nixos modules

having to wait for stylix to update their hyprlock config
to the new syntax https://github.com/nix-community/stylix/pull/2087

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -23,7 +23,7 @@
 monitor = HDMI-A-1, 2560x1440@144, 2560x0, 1
 monitor = DP-1, 3840x2160@160, 0x0, 1.5, bitdepth, 10
 
-
+env = XDG_CURRENT_DESKTOP,Hyprland
 
 ###################
 ### MY PROGRAMS ###
@@ -45,7 +45,9 @@ $menu = dmenu-wl_run -i --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+# exec-once = waybar & hyprpaper
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- hyprpaper
 
 
 #############################
