chore: update hyprland windowrules and hyprpaper

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -342,31 +342,31 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# windowrule = float, match:class ^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-# windowrule = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, match:class .*
 
 # Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus on, match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0
 
 # smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = border_size 0, match:float 0, match:workspace w[tv1]
+windowrule = rounding 0, match:float 0, match:workspace w[tv1]
+windowrule = border_size 0, match:float 0, match:workspace f[1]
+windowrule = rounding 0, match:float 0, match:workspace f[1]
 
 
 # blacklist opacities
-windowrulev2 = opacity 1.0 override, class:^(jetbrains-toolbox)$
-windowrulev2 = opacity 1.0 override, class:^(jetbrains-webstorm)$
-windowrulev2 = opacity 1.0 override, class:^(jetbrains-idea)$
-windowrulev2 = opacity 1.0 override, class:^(jetbrains-rustrover)$
-windowrulev2 = opacity 1.0 override, class:^(jetbrains-datagrip)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-toolbox)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-webstorm)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-idea)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-rustrover)$
+windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-datagrip)$
 
 # float 
-windowrulev2 = float, class:^(zen-beta)$
-windowrulev2 = float, class:^(org.prismlauncher.PrismLauncher)$
-
+# float 
+windowrule = float on, match:class ^(zen-beta)$
+windowrule = float on, match:class ^(org.prismlauncher.PrismLauncher)$
