--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -247,9 +247,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, Q, forcekillactive
-bind = $mainMod, W, killactive
-bind = $mainMod, F4, exec, kill -15 "$(hyprctl activewindow | grep -Po 'pid: \K\d+')"
+bind = $mainMod, Q, killactive
+bind = $mainMod, F4, forcekillactive
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
