feat(nixbook): update nixbook to nixpkgs-unstable with standard hyprland
still todo:
- mouse speed on trackpad
- disable trackpad when typing
- change scale to be smaller like macos

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -256,6 +256,7 @@ bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, layoutmsg, togglesplit
 bind = $mainMod, I, exec, hyprlock
+bind = $mainMod, A, exec, pidof pavucontrol && pkill pavucontrol || pavucontrol
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -371,3 +372,4 @@ windowrule = opacity 1.0 override 1.0 override, match:class ^(jetbrains-datagrip
 # float 
 windowrule = float on, match:class ^(zen-beta)$
 windowrule = float on, match:class ^(org.prismlauncher.PrismLauncher)$
+windowrule = float on, match:class ^(org.pulseaudio.pavucontrol)$
