--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -226,7 +226,10 @@ input {
     sensitivity = -0.97 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+	disable_while_typing = true;
+
+	scroll_factor = 0.1
     }
 }
 
@@ -236,9 +239,18 @@ gesture = 3, horizontal, workspace
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 # device {
-#     name = epic-mouse-v1
+#     name = epi-mouse-v1
 #     sensitivity = -0.3
 # }
+
+device {
+    name = apple-mtp-multi-touch
+    accel_profile = adaptive
+
+    sensitivity = 0
+    # scroll_points = 0.2 0 0.5 1 1.2 1.5
+}
+
 
 
 ###################
