feat(hyprland): should add disable while typing but somehow doesn't work

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -227,7 +227,7 @@ input {
 
     touchpad {
         natural_scroll = true
-	disable_while_typing = true;
+	disable_while_typing = true
 
 	scroll_factor = 0.1
     }
@@ -247,8 +247,8 @@ device {
     name = apple-mtp-multi-touch
     accel_profile = adaptive
 
-    sensitivity = 0
-    # scroll_points = 0.2 0 0.5 1 1.2 1.5
+    sensitivity = -0.2
+    scroll_points = 0.2 0 0.5 1 1.2 1.5
 }
 
 
