feat(hyprland): add touchpad toggle
pressing mainmod + g toggles the touchpad. this is used
until a fix for disable_while_tying is found

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -243,12 +243,16 @@ gesture = 3, horizontal, workspace
 #     sensitivity = -0.3
 # }
 
+$LAPTOP_TOUCHPAD_ENABLE = true
+
 device {
     name = apple-mtp-multi-touch
     accel_profile = adaptive
 
     sensitivity = -0.2
     scroll_points = 0.2 0 0.5 1 1.2 1.5
+
+    enabled = $LAPTOP_TOUCHPAD_ENABLE
 }
 
 
