feat(hyprland): add hypridle to manage session locking

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -51,6 +51,7 @@ $menu = dmenu-wl_run -i --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.
 # exec-once = waybar & hyprpaper
 exec-once = uwsm app -- waybar
 exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hyprlock
 
 
 #############################
@@ -274,7 +275,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, layoutmsg, togglesplit
-bind = $mainMod, I, exec, hyprlock
+bind = $mainMod, I, exec, loginctl lock-session
 bind = $mainMod, A, exec, pidof pavucontrol && pkill pavucontrol || pavucontrol
 
 # Move focus with mainMod + arrow keys
