--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -47,10 +47,8 @@ $menu = dmenu-wl_run -i --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper
 exec-once = uwsm app -- waybar
-exec-once = uwsm app -- hyprpaper
+# exec-once = uwsm app -- hyprpaper
 exec-once = uwsm app -- hyprlock
 
 
