feat(hypr): enable no dead keys

--- a/conf/hypr/hyprland.conf
+++ b/conf/hypr/hyprland.conf
@@ -215,6 +215,8 @@ input {
     kb_options =
     kb_rules =
 
+    kb_variant = nodeadkeys
+
     numlock_by_default = true
 
     repeat_rate = 30
@@ -226,9 +228,9 @@ input {
 
     touchpad {
         natural_scroll = true
-	disable_while_typing = true
+        disable_while_typing = true
 
-	scroll_factor = 0.1
+        scroll_factor = 0.1
     }
 }
 
