feat(zsh,ghostty): remove zsh-cwd, ghostty open new window in previous cwd

--- a/conf/ghostty/config
+++ b/conf/ghostty/config
@@ -21,6 +21,8 @@ window-theme = ghostty
 window-height = 24
 window-width = 90
 
+window-inherit-working-directory = true
+
 quick-terminal-position = center
 quick-terminal-animation-duration = 0
 
